apps/web_theme/static/theme/uoa-psd/style.css
/* ... */
.table .form-row.inline.attributes input[type="checkbox"] {
    text-align: center;
    margin-left: 2em;
    margin-right: 2em;
}

.columns-detail tr:nth-child(even), .table tr:nth-child(even) {
  background-color: #eef0f2;
}
.columns-detail tr:nth-child(odd), .table tr:nth-child(odd) {
  background-color: #FFF;
}
.columns-detail tr, .columns-detail td, .table tr, .table td {
  border:none;
}

/* info elements */
.info {
  font-size:0.9em;
  color:#999;
  font-style: italic;
}
.info > div {
  display:block;
}

/* Style for the Home page */

.actions-box {
  background-color: rgba(0, 0, 0, 0.02);
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 5px 5px 5px 5px;
  margin: 10px;
  padding: 0.25em 1.25em 1.25em;
  width: 40%;
  float:left;
}

#dept-selection {
  background-color: none;
  clear:both;
}

#dept-selection .tc{
  float:left;
  font-weight:bold;
  width:100%;
}

.welcome-text {
  display: block;
  float: left;
  font-size: 1.1em;
  font-weight: bold;
  margin: 20px 0 35px;
  background-color: none;
  box-shadow:0px 0px 7px -2px rgba(167, 180, 124, 1.0);
  padding:10px;
}

a.button:link, a.button:visited, a.button:hover, a.button:active, button.button {
    font-weight: normal;
}

.group button.button {
  clear: both;
  display: block;
  margin: 0 auto;
}

.form div.group .button {
  font-size: 0.9em;
  font-weight: normal;
  margin-left: auto;
  margin-right: auto;
  /*overflow: auto;*/
  padding: 10px;
  min-width: 30%;
}

form.form .filter_form.table {
    overflow: inherit;
}

/* search button in fiter forms */
form.form .filter_form button.button {
  padding:5px 10px;
  text-align: center;
  background-color: #F0F0F0;
  display: block;
  border: 1px solid;
  outline: 0;
  font-size:1.1em;
  background-image: -moz-linear-gradient(center top , #FFFFFF 2%, #F0F0F0 2%, #DEDEDE 100%);
  border: 1px solid #969696;
  border-radius: 2px 2px 2px 2px;
  box-shadow: 0 1px 2px rgba(144, 144, 144, 0.4);
  color: #515151;
  cursor: pointer;
  outline: 0 none;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  vertical-align: middle;
  white-space: nowrap;
  word-wrap: normal;

}

/* submit buttons */
.form div.submit_button{
  margin-top: 25px;
  width: 100%;
  text-align: center;
  float: center;
  clear: both;
}

.form div.submit_button > div {
  clear: both;
  display: block;
  margin: 0 auto;
}

.form div.submit_button button, .form div.submit_button button.button{
  text-align: center;
  background-color: #F0F0F0;
  display: inline-block;
  float: none;
  border: 1px solid;
  outline: 0;
  font-size: 1.2em;
  background-image: -moz-linear-gradient(center top , #FFFFFF 2%, #F0F0F0 2%, #DEDEDE 100%);
  border: 1px solid #969696;
  border-radius: 2px 2px 2px 2px;
  box-shadow: 0 1px 2px rgba(144, 144, 144, 0.4);
  color: #515151;
  cursor: pointer;
  outline: 0 none;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  vertical-align: middle;
  white-space: nowrap;
  word-wrap: normal;
  padding: 5px;
  margin-right: 10px;
}
.form div.submit_button button:hover,
.form div.submit_button button:active,
form.form .filter_form button.button:hover,
form.form .filter_form button.button:active
{
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); 
  color: #818181;
  background-color: #fff;
  background-image: -moz-linear-gradient(top,  rgb(255,255,255) 2%, rgb(244,244,244) 2%, rgb(229,229,229) 100%);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgb(255,255,255)), color-stop(2%,rgb(244,244,244)), color-stop(100%,rgb(229,229,229)));
  background-image: -webkit-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%);background-image: -o-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); background-image: -ms-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); background-image: linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); 
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 );
  border: 1px solid #666;
  box-shadow: inset 0 1px 0 rgba(256,256,256,0.4),0 1px 3px rgba(0,0,0,0.5);
}

.form div.submit_button a.button {
  text-align: center;
  background-color: #F0F0F0;
  display: inline-block;
  float: none;
  border: 1px solid;
  outline: 0;
  font-size: 1.2em;
  background-image: -moz-linear-gradient(center top , #FFFFFF 2%, #F0F0F0 2%, #DEDEDE 100%);
  border: 1px solid #969696;
  border-radius: 2px 2px 2px 2px;
  box-shadow: 0 1px 2px rgba(144, 144, 144, 0.4);
  color: #515151;
  cursor: pointer;
  outline: 0 none;
  padding: 5px;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  vertical-align: middle;
  white-space: nowrap;
  word-wrap: normal;
}

.form div.submit_button a.button:hover, .form div.submit_button a.button:active{
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); 
  color: #818181;
  background-color: #fff;
  background-image: -moz-linear-gradient(top,  rgb(255,255,255) 2%, rgb(244,244,244) 2%, rgb(229,229,229) 100%);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgb(255,255,255)), color-stop(2%,rgb(244,244,244)), color-stop(100%,rgb(229,229,229)));
  background-image: -webkit-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%);background-image: -o-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); background-image: -ms-linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); background-image: linear-gradient(top,  rgb(255,255,255) 2%,rgb(244,244,244) 2%,rgb(229,229,229) 100%); 
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 );
  border: 1px solid #666;
  box-shadow: inset 0 1px 0 rgba(256,256,256,0.4),0 1px 3px rgba(0,0,0,0.5);
}

input[type="radio"] {
  width:5%;
  display: inline-block;
}
/* ... */

